--- a/.toast/toastfile.yml
+++ b/.toast/toastfile.yml
@@ -10,8 +10,8 @@
         var: shellresult
     - name: Link bee movie
       file:
-        src: "../bee movie script.txt"
-        dest: ../bms.txt
+        src: "bee movie script.txt"
+        dest: bms.txt
         state: link
     # - name: Template config
     #   template:
