--- a/.toast/toastfile.yml
+++ b/.toast/toastfile.yml
@@ -18,7 +18,7 @@
         state: touch
     - name: Link bee movie
       file:
-        src: "../bee movie script.txt"
+        src: "bee movie script.txt"
         dest: ../bms.txt
         state: link
     # - name: Template config
