--- a/.toast/toastfile.yml
+++ b/.toast/toastfile.yml
@@ -21,12 +21,12 @@
         state: touch
     - name: Touch that
       file:
-        path: {{ (toast.slice.path, 'that') | path_join}}
+        path: "{{ (toast.slice.path, 'that') | path_join}}"
         state: touch
     - name: Link bee movie
       file:
         src: "bee movie script.txt"
-        dest: {{ (toast.slice.path, 'bms.txt') | path_join}}
+        dest: "{{ (toast.slice.path, 'bms.txt') | path_join}}"
         state: link
     # - name: Template config
     #   template:
