--- a/.toast/toastfile.yml
+++ b/.toast/toastfile.yml
@@ -6,4 +6,4 @@
         name: nginx
       vars:
         subdomain: gwt.lukemoll.com
-        webroot: {{ toast.slice.path }}
+        webroot: "{{ toast.slice.path }}"
